Completing Header/nav bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="images/img/logo.png" alt="logo"></a>
+        <a href="#"><img src="img/logo.png" alt="logo"></a>
 
         <div>
             <ul id="navbar">
@@ -23,7 +23,14 @@
             </ul>
         </div>
     </section>
+    <section id="hero">
+        <h4>Trade-in-Offer</h4>
+        <h2>Super value deals</h2>
+        <h1>On All Our Products</h1>
+        <p></p>
+        <button>Shop Now</button>
 
+    </section>
     <h1></h1>
     <h2></h2>
     <h3></h3>
