Almost complete on the feature section

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
         <h4>Trade-in-Offer</h4>
         <h2>Super value deals</h2>
         <h1>On All Our Products</h1>
-        <p></p>
+        <p>Save more with coupons & up to 70% off!<p>
         <button>Shop Now</button>
-
+    </section>
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="#">
+            <h6>Free Shipping</h6>
+        </div>
     </section>
     <h1></h1>
     <h2></h2>
