Creating banners now

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </div>
     </section>
+
     <section id="hero">
         <h4>Trade-in-Offer</h4>
         <h2>Super value deals</h2>
@@ -30,21 +31,318 @@
         <p>Save more with coupons & up to 70% off!<p>
         <button>Shop Now</button>
     </section>
+
     <section id="feature" class="section-p1">
         <div class="fe-box">
             <img src="img/features/f1.png" alt="#">
             <h6>Free Shipping</h6>
         </div>
+        <div class="fe-box">
+            <img src="img/features/f2.png" alt="#">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f3.png" alt="#">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f4.png" alt="#">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f5.png" alt="#">
+            <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f6.png" alt="#">
+            <h6>24/7 Support</h6>
+        </div>
     </section>
-    <h1></h1>
-    <h2></h2>
-    <h3></h3>
-    <h4></h4>
-    <h5></h5>
-    <h6></h6>
-    
-    <p></p>
 
+    <section id="product1" class="section-p1">
+        <h2>Featured Products</h2>
+        <p>Summer Collection New Modern Design</p>
+        <div class="pro-container">
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/f1.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/f2.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/f3.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/f4.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/f5.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/f6.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/f7.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/f8.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+        </div>
+    </section>
+
+    <section id="banner" class="section-m1">
+        <h4 class="rep">Repair Service</h4>
+        <h2 class="sale">Up to <span>70% Off</span> - All t-Shirts & Accesories</h2>
+        <button class="normal">Explore More</button> <!--to create a global button-->
+    </section>
+
+    <section id="product1" class="section-p1">
+        <h2>New Arrivals</h2>
+        <p>Summer Collection New Modern Design</p>
+        <div class="pro-container">
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/n1.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/n2.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/n3.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/n4.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/n5.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/n6.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/n7.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+            <div class="pro"> <!--This is to create a div for a product-->
+                <img src="img/products/n8.jpg" alt="">
+                <div class="des"> <!--This is for the description of the product-->
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-Shirts</h5>
+                    <div class="star"> <!--Stars = reviews of the product-->
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
+            </div> 
+        </div>
+    </section>
+    
+    <section id="sm-banner" class="section-p1">
+        <div class="banner-box">
+            <h4>crazy deals</h4>
+            <h2>buy 1 get 1 free</h2>
+            <span>The best classic dress is on sale at cara</span>
+            <button>Learn More</button>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
