--- a/index.html
+++ b/index.html
@@ -340,9 +340,64 @@
             <h4>crazy deals</h4>
             <h2>buy 1 get 1 free</h2>
             <span>The best classic dress is on sale at cara</span>
-            <button>Learn More</button>
+            <button class="white">Learn More</button> <!--White class becomes the global button.white class-->
+        </div>
+        <div class="banner-box banner-box2"> <!--I have the same class name for-->
+            <h4>spring/summer</h4>
+            <h2>upcoming season</h2>
+            <span>The best classic dress is on sale at cara</span>
+            <button class="white">Collection</button>
+        </div>
+
+    </section>
+
+    <section id="banner3">
+        <div class="banner-box"> <!--I have the same class name for-->
+            <h2>SEASONAL SALE</h2>
+            <h3>Winter Collection -50% OFF</h3>
+        </div>
+        <div class="banner-box banner-box2"> <!--I have the same class name for-->
+            <h2>SEASONAL SALE</h2>
+            <h3>Winter Collection -50% OFF</h3>
+        </div>
+        <div class="banner-box banner-box3"> <!--I have the same class name for-->
+            <h2>SEASONAL SALE</h2>
+            <h3>Winter Collection -50% OFF</h3>
         </div>
     </section>
+
+    <section id="newsletter" class="section-p1 section-m1" >
+        <div class="newstext">
+            <h4>Sign Up For Newsletters</h4>
+            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your email address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
+
+    <footer class="section-p1">
+        <div class="col">
+            <img src="img/logo.png" alt=""> 
+            <h4>Contact</h4>
+            <p><span>Address:</span> 562 Wellington Road. Street 32. Toronto ON CA</p>
+            <p><span>Phone:</span>(+1) 647 888 8888 / (+1) 888 798 8987</p>
+            <p><span>Hours:</span>10:00 - 18:00 Mon-Sat</p>
+            <h5>Follow Us</h5>
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+           
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
