--- a/index.html
+++ b/index.html
@@ -384,7 +384,6 @@
             <p><span>Address:</span> 562 Wellington Road. Street 32. Toronto ON CA</p>
             <p><span>Phone:</span>(+1) 647 888 8888 / (+1) 888 798 8987</p>
             <p><span>Hours:</span>10:00 - 18:00 Mon-Sat</p>
-            <h5>Follow Us</h5>
             <div class="follow">
                 <h4>Follow Us</h4>
                 <div class="icon">
@@ -395,7 +394,34 @@
                     <i class="fab fa-youtube"></i>
                 </div>
             </div>
-           
+        </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms & Conditions </a>
+            <a href="#">Contact Us</a>
+        </div>
+
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="col install">
+            <h4>Install App</h4>
+            <p>From App Store or Google Play</p>
+            <div class="row">
+                <img src="img/pay/app.jpg" alt="">
+                <img src="img/pay/play.jpg" alt="">
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="img/pay/pay.png" alt="">
         </div>
     </footer>
 
