--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html"><i class="fas fa-shopping-bag"></i></a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-bag"></i></a></li>
+                <a href="#" id="close"><i class="fas fa-times"></i></a>
             </ul>
+        </div>
+        <div id="mobile">
+            <a href="cart.html"><i class="fas fa-shopping-bag"></i></a>
+            <i id="bar" class="fas fa-bars"></i>
         </div>
     </section>
 
@@ -379,11 +384,11 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img src="img/logo.png" alt=""> 
+            <img class="logo" src="img/logo.png" alt=""> 
             <h4>Contact</h4>
-            <p><span>Address:</span> 562 Wellington Road. Street 32. Toronto ON CA</p>
-            <p><span>Phone:</span>(+1) 647 888 8888 / (+1) 888 798 8987</p>
-            <p><span>Hours:</span>10:00 - 18:00 Mon-Sat</p>
+            <p><strong>Address: </strong> 562 Wellington Road. Street 32. Toronto ON CA</p>
+            <p><strong>Phone:</strong>(+1) 647 888 8888 / (+1) 888 798 8987</p>
+            <p><strong>Hours:</strong>10:00 - 18:00 Mon-Sat</p>
             <div class="follow">
                 <h4>Follow Us</h4>
                 <div class="icon">
@@ -422,6 +427,10 @@
             </div>
             <p>Secured Payment Gateways</p>
             <img src="img/pay/pay.png" alt="">
+        </div>
+
+        <div class="copyright">
+            <p>&#169; 2022, Orlandocodes - HTML CSS Ecommerce</p>
         </div>
     </footer>
 
