--- a/sproduct.html
+++ b/sproduct.html
@@ -29,278 +29,43 @@
         </div>
     </section>
 
-    <section id="page-header">
-        <h2>#stayhome</h2>
-        <p>Save more with coupons & up to 70% off!<p>
-    </section>
+    <section id="prodetails" class="section-p1">
+        <div class="single-pro-image">
+            <img src="img/products/f1.jpg" width="100%" id="MainImg" alt="">
 
-    <section id="product1" class="section-p1">
-        <div class="pro-container">
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/f1.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+            <div class="small-img-group">
+                <div class="small-img-col">
+                    <img src="img/products/f1.jpg" width="100%" id="small-img" alt="">
                 </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/f2.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                <div class="small-img-col">
+                    <img src="img/products/f2.jpg" width="100%" id="small-img" alt="">
                 </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/f3.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                <div class="small-img-col">
+                    <img src="img/products/f3.jpg" width="100%" id="small-img" alt="">
                 </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/f4.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                <div class="small-img-col">
+                    <img src="img/products/f4.jpg" width="100%" id="small-img" alt="">
                 </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/f5.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/f6.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/f7.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/f8.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-        <div class="pro-container">
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/n1.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/n2.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/n3.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/n4.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/n5.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/n6.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/n7.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
-            <div class="pro"> <!--This is to create a div for a product-->
-                <img src="img/products/n8.jpg" alt="">
-                <div class="des"> <!--This is for the description of the product-->
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star"> <!--Stars = reviews of the product-->
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fas fa-cart-arrow-down cart"></i></a>
-            </div> 
+            </div>
         </div>
-    </section>
 
-    <section id="pagination" class="section-p1">
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#"><i class="fa-solid fa-arrow-right"></i></a> <!--Icon is not showing up from font awesome! -->
-
+        <div class="single-pro-details">
+            <h6></h6>
+            <h4>Men's Fashion T Shirt</h4>
+            <h2>$139.00</h2>
+            <select>
+                <option>Select Size</option>
+                <option>Small</option>
+                <option>Medium</option>
+                <option>Large</option>
+                <option>XL</option>
+                <option>XXL</option>
+            </select>
+            <input type="number" value="1">
+            <button class="normal">Add To Cart</button>
+            <h4>Product Details</h4>
+            <span>The Gildan Ultra Cotton T-shirt is made form a substantial 6.0 oz. per sq. yd. fabric constructed from 100% cotton. This classic fit preshrunk jersey knit provides unmatched comfort with each wear. Featuruing a taped nexk and shoulder and a seamless double-needle collar and available in a rage of colors. It offers it all in the ultimate head-turning package</span>
+        </div>
     </section>
 
     <section id="newsletter" class="section-p1 section-m1" >
