Completed the Shop page, starting blog page

--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
 
     <section id="product1" class="section-p1">
         <div class="pro-container">
-            <div class="pro"> <!--This is to create a div for a product-->
+            <div class="pro" onclick="window.location.href='sproduct.html';"> <!--This is to create a div for a product-->
                 <img src="img/products/f1.jpg" alt="">
                 <div class="des"> <!--This is for the description of the product-->
                     <span>adidas</span>
