Creating the blog page

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
         </div>
     </section>
 
-    <section id="page-header">
+    <section id="page-header" class="blog-header">
         <h2>#stayhome</h2>
         <p>Save more with coupons & up to 70% off!<p>
     </section>
