--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" alt="logo"></a>
+        <a href="index.html"><img src="img/logo.png" alt="logo"></a>
 
         <div>
             <ul id="navbar">
