Creating contact us form

--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a class="active" href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="fas fa-times"></i></a>
             </ul>
@@ -29,54 +29,50 @@
         </div>
     </section>
 
-    <section id="page-header" class="about-header">
-        <h2>#KnowUs</h2>
-        <p>Read all case studies about our products!<p>
+    <section id="page-header" class="contact-header">
+        <h2>#let's_talk</h2>
+        <p>LEAVE A MESSAGE, We love to hear from you!<p>
     </section>
 
-    <section id="about-head" class="section-p1"><!-- section-p1 is a global calss -->
-        <img src="img/about/a6.jpg" alt="">
-        <div>
-            <h2>Who We Are?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At dolore, quisquam a odio laudantium, maxime officiis veniam consequatur assumenda eaque minima. At veritatis ullam pariatur quod maxime voluptatibus porro eius.</p>
-            <abbr title="">Create stunning images with as much aor little contraol as you like thanks to a choice of Basics and Creative Modes.</abbr>
-
-            <br><br>
-            <marquee bgcolor="#ccc" loop="-1" scrollammount="5" witdh="100%">Create stunning images with as much or as little control as you like thanks to a choice of Basics and Creative Modes</marquee>
+    <section id="contact-details" class="section-p1">
+        <div class="details">
+            <span>GET IN TOUCH</span>
+            <h2>Visit one of ouragency locations or contact us toryda</h2>
+            <h3>Head Office</h3>
+            <div>
+                <li>
+                    <i class="far fa-map"></i>
+                    <p>1 York Street Toronto, Ontario</p>
+                </li>
+                <li>
+                    <i class="far fa-map"></i>
+                    <p>contact@example.com</p>
+                </li>
+                <li>
+                    <i class="far fa-map"></i>
+                    <p>contact@example.com</p>
+                </li>
+                <li>
+                    <i class="far fa-map"></i>
+                    <p>Monday to Saturday: 9:00AM to 4:00PM</p>
+                </li>
+            </div>
         </div>
+    
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10590.717282499836!2d-79.39001403983102!3d43.641615240889216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b34d52d91a7ad%3A0x1145c4e3fee29313!2s1%20York%20St%2C%20Toronto%2C%20ON%20M5J%200B6!5e0!3m2!1sen!2sca!4v1668835894911!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
     </section>
 
-    <section id="about-app" class="section-p1">
-        <h1>Download Our <a href="#">App</a></h1>
-        <div class="video">
-            <video autoplay  muted lopp src="img/about/1.mp4"></video>
-        </div>
-    </section>
-
-    <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="img/features/f1.png" alt="#">
-            <h6>Free Shipping</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f2.png" alt="#">
-            <h6>Online Order</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f3.png" alt="#">
-            <h6>Save Money</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f4.png" alt="#">
-            <h6>Promotions</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f5.png" alt="#">
-            <h6>Happy Sell</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f6.png" alt="#">
-            <h6>24/7 Support</h6>
+    <section id="contact-form">
+        <div class="contact-info">
+            <span>LEAVE A MESSAGE</span>
+            <h4>We love to hear from you</h4>
+            <input type="Yourname">
+            <input type="Email" name="" id="">
+            <input type="subject">
+            <input type="Your Message">
         </div>
     </section>
 
