Creating the form

--- a/contact.html
+++ b/contact.html
@@ -65,14 +65,36 @@
 
     </section>
 
-    <section id="contact-form">
-        <div class="contact-info">
+    <section id="form-details">
+        <form action=""> <!-- Creating a form you must create a form element -->
             <span>LEAVE A MESSAGE</span>
             <h4>We love to hear from you</h4>
-            <input type="Yourname">
-            <input type="Email" name="" id="">
-            <input type="subject">
-            <input type="Your Message">
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="normal">Submit</button>
+        </form>
+        <div class="contact-person">
+            <div class="person-1">
+                <img src="img/people/1.png" alt="">
+                <span>Senior Marketing Manager</span>
+                <span>Phone: 647-148-4128</span>
+                <span>Email: contact@example.com</span>
+            </div>
+            <div class="person-1">
+                <img src="img/people/2.png" alt="">
+                <span>Senior Marketing Manager</span>
+                <span>Phone: 647-148-4128</span>
+                <span>Email: contact@example.com</span>
+            </div>
+            <div class="person-1">
+                <img src="img/people/3.png" alt="">
+                <span>Senior Marketing Manager</span>
+                <span>Phone: 647-148-4128</span>
+                <span>Email: contact@example.com</span>
+            </div>
+
         </div>
     </section>
 
