Creating the people info portion

--- a/contact.html
+++ b/contact.html
@@ -75,24 +75,18 @@
             <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <button class="normal">Submit</button>
         </form>
-        <div class="contact-person">
+        <div class="people">
             <div class="person-1">
                 <img src="img/people/1.png" alt="">
-                <span>Senior Marketing Manager</span>
-                <span>Phone: 647-148-4128</span>
-                <span>Email: contact@example.com</span>
+                <p><span>John Doe</span> Marketing Manager <br> Phone: 647-148-4128 <br> <br> Email: contact@example.com</p>
             </div>
             <div class="person-1">
                 <img src="img/people/2.png" alt="">
-                <span>Senior Marketing Manager</span>
-                <span>Phone: 647-148-4128</span>
-                <span>Email: contact@example.com</span>
+                <p><span>William Smith</span> Marketing Manager <br> Phone: 647-148-4128 <br> <br> Email: contact@example.com</p>
             </div>
             <div class="person-1">
                 <img src="img/people/3.png" alt="">
-                <span>Senior Marketing Manager</span>
-                <span>Phone: 647-148-4128</span>
-                <span>Email: contact@example.com</span>
+                <p><span>Emma Stone</span> Marketing Manager <br> Phone: 647-148-4128 <br> <br> Email: contact@example.com</p>
             </div>
 
         </div>
