--- a/contact.html
+++ b/contact.html
@@ -78,15 +78,15 @@
         <div class="people">
             <div class="person-1">
                 <img src="img/people/1.png" alt="">
-                <p><span>John Doe</span> Marketing Manager <br> Phone: 647-148-4128 <br> <br> Email: contact@example.com</p>
+                <p><span>John Doe</span> Marketing Manager <br> Phone: 647-148-4128 <br> Email: contact@example.com</p>
             </div>
             <div class="person-1">
                 <img src="img/people/2.png" alt="">
-                <p><span>William Smith</span> Marketing Manager <br> Phone: 647-148-4128 <br> <br> Email: contact@example.com</p>
+                <p><span>William Smith</span> Marketing Manager <br> Phone: 647-148-4128 <br> Email: contact@example.com</p>
             </div>
             <div class="person-1">
                 <img src="img/people/3.png" alt="">
-                <p><span>Emma Stone</span> Marketing Manager <br> Phone: 647-148-4128 <br> <br> Email: contact@example.com</p>
+                <p><span>Emma Stone</span> Marketing Manager <br> Phone: 647-148-4128 <br> Email: contact@example.com</p>
             </div>
 
         </div>
