Adding scroll to the cart information

--- a/cart.html
+++ b/cart.html
@@ -100,7 +100,7 @@
                     <td><Strong>$ 335</Strong></td>
                 </tr>
             </table>
-
+            <button class="normal">Proceed to checkout</button>
         </div>
     </section>
 
